--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </li>
 
         <li>
-          <a href="https://sushi-boy.netlify.app/" target="_blank">
+          <a href="https://sushi-boy.vercel.app/" target="_blank">
             <img src="Images/sushi-svgrepo-com.svg" alt="" />
             Sushi-Boy
           </a>
